--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,6 +31,6 @@
 
 @font-face {
   font-family: 'lpmq';
-  src: url(../../quran/assets/font/LPMQIsepMisbah.ttf) format('Ttuetype');
+  src: url(../../quran/assets/font/LPMQIsepMisbah.ttf) format('truetype');
   font-display: swap;
 }
