--- a/src/components/CardGrid.css
+++ b/src/components/CardGrid.css
@@ -12,9 +12,10 @@
 
 .card {
   background-color: #ffffff;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 20px;
-  color: #4CAF50;
+  color: #29784c;
+  border-width: thin;
   /* Gaya lainnya yang Anda inginkan untuk kartu */
 }
