--- a/src/components/CardGrid.css
+++ b/src/components/CardGrid.css
@@ -17,5 +17,6 @@
   padding: 20px;
   color: #29784c;
   border-width: thin;
+  border-style: solid;
   /* Gaya lainnya yang Anda inginkan untuk kartu */
 }
