--- a/src/components/CardGrid.css
+++ b/src/components/CardGrid.css
@@ -12,11 +12,15 @@
 
 .card {
   background-color: #ffffff;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 20px;
   color: #29784c;
   border-width: thin;
   border-style: solid;
   /* Gaya lainnya yang Anda inginkan untuk kartu */
+}
+.card:hover{
+-webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.6);
+  -moz-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.6);
+box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
